@@ -2,6 +2,7 @@ Version 4.01:
 
 * Option colors changed
 * Selected option is outlined
+* Circle color white, background black
 
 -------------------------------------------------------
 
